@@ -526,12 +526,9 @@ int foo(void) {
         hwloc_config_prefix[utils/hwloc/test-build-custom-topology.sh]
         hwloc_config_prefix[utils/hwloc/test-fake-plugin.sh]
         hwloc_config_prefix[utils/hwloc/test-parsing-flags.sh]
-        hwloc_config_prefix[utils/hwloc/test-hwloc-dump-hwdata/Makefile]
-        hwloc_config_prefix[utils/hwloc/test-hwloc-dump-hwdata/test-hwloc-dump-hwdata.sh]
         hwloc_config_prefix[utils/lstopo/test-lstopo.sh]
         hwloc_config_prefix[utils/lstopo/test-lstopo-shmem.sh]
         hwloc_config_prefix[contrib/hwloc-ps.www/Makefile]
-        hwloc_config_prefix[contrib/systemd/Makefile]
         hwloc_config_prefix[contrib/completion/Makefile]
         hwloc_config_prefix[contrib/completion/test-bash-completion.sh]
         hwloc_config_prefix[contrib/misc/Makefile]
@@ -557,7 +554,6 @@ int foo(void) {
       hwloc_config_prefix[utils/hwloc/test-build-custom-topology.sh] \
       hwloc_config_prefix[utils/hwloc/test-fake-plugin.sh] \
       hwloc_config_prefix[utils/hwloc/test-parsing-flags.sh] \
-      hwloc_config_prefix[utils/hwloc/test-hwloc-dump-hwdata/test-hwloc-dump-hwdata.sh] \
       hwloc_config_prefix[utils/lstopo/test-lstopo.sh] \
       hwloc_config_prefix[utils/lstopo/test-lstopo-shmem.sh] \
       hwloc_config_prefix[contrib/completion/test-bash-completion.sh])
