@@ -49,17 +49,6 @@ if HWLOC_HAVE_X86_CPUID
 bin_PROGRAMS += hwloc-gather-cpuid
 endif HWLOC_HAVE_X86_CPUID
 
-if HWLOC_HAVE_LINUX
-if HWLOC_HAVE_X86
-sbin_PROGRAMS = hwloc-dump-hwdata
-SUBDIRS += test-hwloc-dump-hwdata
-endif HWLOC_HAVE_X86
-endif HWLOC_HAVE_LINUX
-
-hwloc_dump_hwdata_SOURCES = \
-	hwloc-dump-hwdata.c
-hwloc_dump_hwdata_CPPFLAGS = $(AM_CPPFLAGS) -DRUNSTATEDIR="\"$(HWLOC_runstatedir)\""
-
 hwloc_calc_SOURCES = \
         hwloc-calc.h \
         hwloc-calc.c
@@ -129,22 +118,6 @@ EXTRA_DIST += $(hgc_page:.1=.1in)
 if HWLOC_HAVE_X86_CPUID
 nodist_man_MANS += $(hgc_page)
 endif
-
-# Same for dump-hwdata page on Linux/x86
-hdh_page = hwloc-dump-hwdata.1
-EXTRA_DIST += $(hdh_page:.1=.1in)
-if HWLOC_HAVE_LINUX
-# WARNING: The SEDMAN line below isn't portable ($(subst ...) is GNU-make only).
-# Keep this rule Linux-only, or stop using $(subst ...). See issue #187.
-if HWLOC_HAVE_X86
-nodist_man_MANS += $(hdh_page)
-hwloc-dump-hwdata.1: hwloc-dump-hwdata.1in
-	@ echo Creating $@ man page...
-	@ $(SEDMAN) \
-	  -e 's/%RUNSTATEDIR%/$(subst /,\/,$(HWLOC_runstatedir))/g' \
-	  > $@ < $<
-endif HWLOC_HAVE_X86
-endif HWLOC_HAVE_LINUX
 
 .1in.1:
 	@ echo Creating $@ man page...
