@@ -1,39 +1,0 @@
-#!/bin/sh
-#-*-sh-*-
-
-#
-# SPDX-License-Identifier: BSD-3-Clause
-# Copyright © 2015-2018 Inria.  All rights reserved.
-# See COPYING in top-level directory.
-#
-
-HWLOC_top_srcdir="@HWLOC_top_srcdir@"
-HWLOC_top_builddir="@HWLOC_top_builddir@"
-srcdir="$HWLOC_top_srcdir/utils/hwloc"
-builddir="$HWLOC_top_builddir/utils/hwloc"
-hdhd="$builddir/hwloc-dump-hwdata"
-
-: ${TMPDIR=/tmp}
-{
-  tmp=`
-    (umask 077 && mktemp -d "$TMPDIR/fooXXXXXX") 2>/dev/null
-  ` &&
-  test -n "$tmp" && test -d "$tmp"
-} || {
-  tmp=$TMPDIR/foo$$-$RANDOM
-  (umask 077 && mkdir "$tmp")
-} || exit $?
-
-set -e
-
-tarball="$srcdir/test-hwloc-dump-hwdata/"`basename $1`
-(cd "$tmp" && tar xfj $tarball)
-
-HWLOC_FSROOT="`echo "$tmp"/*`"
-export HWLOC_FSROOT
-
-$hdhd -o $tmp/output
-
-@DIFF@ @HWLOC_DIFF_U@ -r "$HWLOC_FSROOT/expected_output" "$tmp/output"
-
-rm -rf "$tmp"
